[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/img_level_complete.png" type="Texture" id=1]
[ext_resource path="res://ThemeMain.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=3]

[node name="GameWin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texLogo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.2
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contLabels" type="VBoxContainer" parent="."]
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.5
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labLevelMoney" type="Label" parent="contLabels"]
margin_top = 199.0
margin_right = 756.0
margin_bottom = 280.0
text = "Gained: 0$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labTotalMoney" type="Label" parent="contLabels"]
margin_top = 296.0
margin_right = 756.0
margin_bottom = 377.0
text = "Money: 0$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contButtons" type="VBoxContainer" parent="."]
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 1.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnReplay" type="Button" parent="contButtons"]
margin_right = 756.0
margin_bottom = 89.0
text = "Replay"

[node name="btnGarage" type="Button" parent="contButtons"]
margin_top = 105.0
margin_right = 756.0
margin_bottom = 194.0
text = "Garage"

[node name="btnMenu" type="Button" parent="contButtons"]
margin_top = 210.0
margin_right = 756.0
margin_bottom = 299.0
text = "Menu"
[connection signal="pressed" from="contButtons/btnReplay" to="." method="_on_btnReplay_pressed"]
[connection signal="pressed" from="contButtons/btnGarage" to="." method="_on_btnGarage_pressed"]
[connection signal="pressed" from="contButtons/btnMenu" to="." method="_on_btnMenu_pressed"]
